2015-04-10  Gerrit Holl  <gerrit.holl@utoronto.ca>:

	* pyatmlab-0-0-77

	* pyatmlab/collocations.py:

	(CollocatedDataset):

	- Incorporate the ability to flag data

	(ProfileCollocationDescriber):

	- Fix bugs regarding conversion factors

	- Fix bug in processing uncollapsed data

	* pyatmlab/dataset.py:

	- Incorporate flagging.  Implement by child making a flag() method.

	- More flexible matching for 'unique fields', now both self and
	other_obj have this set and the intersection is used.  Allows for
	different fields to be used when matching DMPs or flags.

	* pyatmlab/datasets.py(ACEFTS):

	- Implement flagging method and set unique_fields accordingly.

2015-04-08  Gerrit Holl  <gerrit.holl@utoronta.ca>:

	* pyatmlab-0-0-76

	* pyatmlab/collocations.py:

	(ProfileCollocationDescriber):

	- Calculate full range of nd based on different p/T alternatives, take
	the mean and range.

	- Correctly divide secondary error by √N.  Requires quite some
	recoding.

	- Correctly calculate regression confidence band using statsmodels
	standard method

	(collapse):

	- Return sort order, needed by some

2015-04-06  Gerrit Holl  <gerrit.holl@utoronto.ca>:

	* pyatmlab-0-0-75

	* pyatmlab/collocations.py:
	
	(ProfileCollocationDescriber):

	- Start working to estimating error propagation of T and p into
	partial columns

	- Use sqrt(0.05) rather than 0.05 for confidence interval for partial
	column linear regression, and write all estimates to datafile for
	pgfplots

	(collapse):

	- Collapse both ways!

2015-04-05  Gerrit Holl  <gerrit.holl@utoronto.ca>:

	* pyatmlab-0-0-74

	* pyatmlab/collocations.py:

	(ProfileCollocationDescriber):

	- Improve collapsing.  Consider that the primary is being smoothed by
	the secondary, for a set of N (prim, sec) collocations where all
	secondaries are different and all primary are supposed to be
	identical, they no longer are if the primary is being smoothed by the
	secondary.  Therefore, we need to average not only the secondary but